--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -411,6 +411,15 @@
 "success-notification-dialog-label" = "Ümbriku jagamiseks klõpsa \"JAGA\" nupul ning vali soovitud rakendus. Kõik ümbrikud on leitavad ka rakenduse seadetes asuvas \"Hiljutised dokumendid\" kaustast.";
 "success-notification-dialog-dont-show-again" = "Ära rohkem näita";
 
+// ** Info **
+"info-app-version" = "RIA DigiDoc versioon";
+"info-app-issuer" = "Eesti ID-tarkvara on välja antud Riigi Infosüsteemi Ameti poolt";
+"info-app-contact" = "Küsimuste korral pöördu";
+"info-app-contact-display-link" = "id.ee";
+"info-app-contact-link" = "https://www.id.ee";
+"info-app-logo-accessibility" = "Projekti on toetatud Euroopa Liidu Regionaalarengu Fondist";
+"info-app-additional-licenses-label" = "Täiendavad litsentsid ja komponendid";
+
 // ** Images **
 "digidoc-image-accessibility" = "DigiDoc";
 
