Add new settings design

--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -508,8 +508,8 @@
 "voice-control-close" = "Close";
 "voice-control-search" = "Search";
 "voice-control-file-row" = "File";
-"voice-control-signing-service" = "Signing service";
-"voice-control-timestamping-service" = "TimeStamping service";
+"voice-control-signing-service" = "Edit Signing service";
+"voice-control-timestamping-service" = "Edit TimeStamping service";
 "voice-control-enable-log-generation" = "Enable log generation";
 "voice-control-disable-log-generation" = "Disable log generation";
 "voice-control-estonian-language" = "Estonian language";
@@ -541,7 +541,16 @@
 "voice-control-role-country" = "Country";
 "voice-control-role-zip" = "Zip";
 "voice-control-role-and-address" = "Role and address";
-"voice-control-siva-service" = "Validation service";
+"voice-control-siva-service" = "Edit Validation service";
 "voice-control-siva-default-access" = "Default validation access";
 "voice-control-siva-manual-access" = "Manual validation access";
 "voice-control-reset-button" = "Reset settings";
+"voice-control-enable-default-timestamping-service" = "Enable default TimeStamping service access";
+"voice-control-disable-default-timestamping-service" = "Disable default TimeStamping service access";
+"voice-control-enable-role-and-address" = "Enable role and address";
+"voice-control-disable-role-and-address" = "Disable role and address";
+"voice-control-help-button" = "Help";
+"voice-control-accessibility-button" = "Accessibility";
+"voice-control-settings-button" = "Settings";
+"voice-control-info-button" = "Info";
+"voice-control-diagnostics-button" = "Diagnostics";
