--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -230,8 +230,20 @@
 "smart-id-country-latvia" = "Latvia";
 "smart-id-challenge-title" = "Sign with Smart-ID";
 "smart-id-sign-help-title" = "Make sure control code matches with one in phone screen and enter Smart-ID PIN2 code";
-"nfc-title" = "Enter your card access number and PIN 2 to sign with ID-card";
-"nfc-can-title" = "Card access number";
+"nfc-title" = "Enter your ID-card access number and PIN2 code to sign with ID-card";
+"nfc-can-title" = "ID-card access number";
+"nfc-device-no-support" = "This device doesn't support NFC.";
+"nfc-hold-near" = "Hold your phone near the ID-card";
+"nfc-multiple-cards" = "More than 1 NFC tag is detected, please remove all NFC tags and try again";
+"nfc-invalid-tag" = "Invalid NFC tag";
+"nfc-unable-connect" = "Unable to connect to NFC tag";
+"nfc-auth" = "Authenticating with ID-card";
+"nfc-reading-cert" = "Reading certificate";
+"nfc-sign-doc" = "Signing document";
+"nfc-sign-done" = "Signing done";
+"nfc-auth-failed" = "Failed to authenticate with ID-card access number";
+"nfc-sign-failed" = "Failed to sign document with ID-card";
+"nfc-pin-locked" = "Locked PIN";
 "role-and-address" = "Role and address";
 "role-and-address-title" = "Enter your role and address info";
 "role-and-address-role-title" = "Role / resolution";
