--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -231,8 +231,20 @@
 "smart-id-country-latvia" = "Läti";
 "smart-id-challenge-title" = "Allkirjasta Smart-IDga";
 "smart-id-sign-help-title" = "Veendu kontrollkoodi õigsuses ja sisesta nutiseadmes Smart-ID PIN2-kood";
-"nfc-title" = "Sisesta oma kaardi ligipääsu number ja PIN 2 kood ID-kaardiga allkirjastamiseks";
-"nfc-can-title" = "Kaardi ligipääsu number";
+"nfc-title" = "ID-kaardiga allkirjastamiseks sisesta oma ID-kaardi ligipääsu number ja PIN2-kood";
+"nfc-can-title" = "ID-kaardi ligipääsu number";
+"nfc-device-no-support" = "See seade ei toeta NFC-d";
+"nfc-hold-near" = "Hoidke ID-kaarti telefoni lähedal";
+"nfc-multiple-cards" = "Rohkem kui 1 NFC märgis on tuvastatud, eemaldage kõik NFC-märgisega esemed  ja proovige uuesti";
+"nfc-invalid-tag" = "Kehtetu NFC-märgis";
+"nfc-unable-connect" = "NFC-ega ei saa ühendust luua";
+"nfc-auth" = "Isikutuvastus ID-kaardiga";
+"nfc-reading-cert" = "Sertifikaadi lugemine";
+"nfc-sign-doc" = "Allkirjasta dokument";
+"nfc-sign-done" = "Allkiri lisatud";
+"nfc-auth-failed" = "Isikutuvastus ID-kaardiga ebaõnnestus";
+"nfc-sign-failed" = "Failed to sign document with ID-card";
+"nfc-pin-locked" = "Locked PIN";
 "role-and-address" = "Roll ja aadress";
 "role-and-address-title" = "Sisesta oma roll ja aadress";
 "role-and-address-role-title" = "Roll / resolutsioon";
