--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -231,8 +231,20 @@
 "smart-id-country-latvia" = "Латвия";
 "smart-id-challenge-title" = "Подписать с помощью приложения Smart-ID";
 "smart-id-sign-help-title" = "Убедитесь в правильности контрольного кода и введите PIN2-код для Smart-ID";
-"nfc-title" = "Enter your card access number and PIN 2 to sign with ID-card";
-"nfc-can-title" = "Card access number";
+"nfc-title" = "Введите номер доступа к карте и PIN2-код для подписи с помощью ID-карты";
+"nfc-can-title" = "Номер доступа к карте";
+"nfc-device-no-support" = "Это устройство не поддерживает NFC";
+"nfc-hold-near" = "Держите телефон рядом с ID-картой";
+"nfc-multiple-cards" = "Обнаружено более одной NFC-метки, пожалуйста, удалите все NFC-метки и повторите попытку";
+"nfc-invalid-tag" = "Недействительная NFC-метка";
+"nfc-unable-connect" = "Невозможно подключиться к NFC-метке";
+"nfc-auth" = "Идентификация личности по карте";
+"nfc-reading-cert" = "Считывание сертификата";
+"nfc-sign-doc" = "Подписать документ";
+"nfc-sign-done" = "Подпись добавлена";
+"nfc-auth-failed" = "Идентификация личности по карте не удалась";
+"nfc-sign-failed" = "Failed to sign document with ID-card";
+"nfc-pin-locked" = "Locked PIN";
 "role-and-address" = "Роль и адрес";
 "role-and-address-title" = "Введите свою роль и адрес";
 "role-and-address-role-title" = "Роль / pезолюция";
