--- a/SkSigningLib/SkSigningLib/Supporting Files/en.lproj/Localizable.strings
+++ b/SkSigningLib/SkSigningLib/Supporting Files/en.lproj/Localizable.strings
@@ -47,3 +47,4 @@
 "sid-rest-error-account-not-found-or-timeout" = "Your Smart-ID transaction has expired or user account not found.";
 "sid-rest-error-certificate-revoked" = "Certificate status revoked";
 "sid-interaction-not-supported-error" = "Failed to sign container. You need to update your Smart-ID application to sign documents in DigiDoc4 Client.";
+"proxy-unable-to-connect-to-service" = "Failed to connect with service server. Please check your network settings or try again later.";
