Show reset settings done message

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -412,6 +412,7 @@
 "settings-proxy-check-connection-success-message" = "Internet connection available!";
 "settings-proxy-check-connection-unsuccessful-message" = "No internet connection!";
 "settings-proxy-check-connection-check-username-and-password" = "Check proxy username and password.";
+"settings-reset-message" = "Default settings restored";
 "proxy-unable-to-connect-to-service" = "Failed to connect with service server. Please check your network settings or try again later.";
 "diagnostics-title" = "Diagnostics";
 "diagnostics-activate-one-time-logging" = "Enable one-time log generation";
