--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -413,6 +413,7 @@
 "settings-proxy-check-connection-success-message" = "Internetiühendus on olemas!";
 "settings-proxy-check-connection-unsuccessful-message" = "Internetiühendus puudub!";
 "settings-proxy-check-connection-check-username-and-password" = "Kontrolli proksi kasutajanime ja parooli.";
+"settings-reset-message" = "Algseaded taastatud";
 "proxy-unable-to-connect-to-service" = "Teenuse serveriga ühendus ebaõnnestus. Palun kontrolli võrgu sätteid või proovi hiljem uuesti.";
 "diagnostics-title" = "Diagnostika";
 "diagnostics-activate-one-time-logging" = "Aktiveeri ühekordne logifaili genereerimine";
