Do not allow to sign with expired certificate
MOPPIOS-1420

Signed-off-by: Raul Metsma <raul@metsma.ee>

--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -245,6 +245,8 @@
 "nfc-auth-failed" = "Идентификация личности по карте не удалась";
 "nfc-sign-failed" = "Failed to sign document with ID-card";
 "nfc-pin-locked" = "Locked PIN";
+"nfc-cert-parse-failed" = "Certificate parsing failed";
+"nfc-cert-expired" = "Сертификат с истекшим сроком действия не может быть использован для подписи";
 "role-and-address" = "Роль и адрес";
 "role-and-address-title" = "Введите свою роль и адрес";
 "role-and-address-role-title" = "Роль / pезолюция";
