--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -244,6 +244,8 @@
 "nfc-auth-failed" = "Failed to authenticate with ID-card";
 "nfc-sign-failed" = "Failed to sign document with ID-card";
 "nfc-pin-locked" = "Locked PIN";
+"nfc-cert-parse-failed" = "Certificate parsing failed";
+"nfc-cert-expired" = "An expired certificate cannot be used for signing";
 "role-and-address" = "Role and address";
 "role-and-address-title" = "Enter your role and address info";
 "role-and-address-role-title" = "Role / resolution";
