--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -245,6 +245,8 @@
 "nfc-auth-failed" = "Isikutuvastus ID-kaardiga ebaõnnestus";
 "nfc-sign-failed" = "Failed to sign document with ID-card";
 "nfc-pin-locked" = "Locked PIN";
+"nfc-cert-parse-failed" = "Certificate parsing failed";
+"nfc-cert-expired" = "Aegunud sertifikaati ei saa kasutada allkirjastamiseks";
 "role-and-address" = "Roll ja aadress";
 "role-and-address-title" = "Sisesta oma roll ja aadress";
 "role-and-address-role-title" = "Roll / resolutsioon";
