Add better NFC translations

--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -231,20 +231,20 @@
 "smart-id-country-latvia" = "Läti";
 "smart-id-challenge-title" = "Allkirjasta Smart-IDga";
 "smart-id-sign-help-title" = "Veendu kontrollkoodi õigsuses ja sisesta nutiseadmes Smart-ID PIN2-kood";
-"nfc-title" = "ID-kaardiga allkirjastamiseks sisesta oma ID-kaardi ligipääsu number ja PIN2-kood";
-"nfc-can-title" = "ID-kaardi ligipääsu number";
-"nfc-device-no-support" = "See seade ei toeta NFC-d";
-"nfc-hold-near" = "Hoidke ID-kaarti telefoni lähedal";
-"nfc-multiple-cards" = "Rohkem kui 1 NFC märgis on tuvastatud, eemaldage kõik NFC-märgisega esemed ja proovige uuesti";
-"nfc-invalid-tag" = "Kehtetu NFC-märgis";
-"nfc-unable-connect" = "NFC-ega ei saa ühendust luua";
-"nfc-auth" = "Isikutuvastus ID-kaardiga";
+"nfc-title" = "ID-kaardiga allkirjastamiseks sisesta oma ID-kaardi ligipääsu number (CAN) ja PIN2 kood";
+"nfc-can-title" = "ID-kaardi ligipääsu number (CAN)";
+"nfc-device-no-support" = "See seade ei toeta kontaktivaba ühendust või NFC on välja lülitatud.";
+"nfc-hold-near" = "Hoia ID-kaarti telefoni lähedal";
+"nfc-multiple-cards" = "Tuvastatud on rohkem kui üks NFC-element. Eemalda kõik NFC-elemendiga esemed  ja proovi uuesti.";
+"nfc-invalid-tag" = "Kehtetu NFC-element";
+"nfc-unable-connect" = "Kontaktivaba ühendust ei saa luua";
+"nfc-auth" = "ID-kaardiga kontaktivaba ühenduse loomine";
 "nfc-reading-cert" = "Sertifikaadi lugemine";
-"nfc-sign-doc" = "Allkirjasta dokument";
+"nfc-sign-doc" = "Ümbriku allkirjastamine";
 "nfc-sign-done" = "Allkiri lisatud";
 "nfc-auth-failed" = "Isikutuvastus ID-kaardiga ebaõnnestus";
-"nfc-sign-failed" = "Failed to sign document with ID-card";
-"nfc-pin-locked" = "Locked PIN";
+"nfc-sign-failed" = "Ümbriku allkirjastamine ebaõnnestus";
+"nfc-pin-locked" = "PIN2 on blokeeritud";
 "role-and-address" = "Roll ja aadress";
 "role-and-address-title" = "Sisesta oma roll ja aadress";
 "role-and-address-role-title" = "Roll / resolutsioon";
