--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -231,20 +231,20 @@
 "smart-id-country-latvia" = "Латвия";
 "smart-id-challenge-title" = "Подписать с помощью приложения Smart-ID";
 "smart-id-sign-help-title" = "Убедитесь в правильности контрольного кода и введите PIN2-код для Smart-ID";
-"nfc-title" = "Введите номер доступа к карте и PIN2-код для подписи с помощью ID-карты";
-"nfc-can-title" = "Номер доступа к карте";
-"nfc-device-no-support" = "Это устройство не поддерживает NFC";
-"nfc-hold-near" = "Держите телефон рядом с ID-картой";
-"nfc-multiple-cards" = "Обнаружено более одной NFC-метки, пожалуйста, удалите все NFC-метки и повторите попытку";
+"nfc-title" = "Чтобы подписать с помощью ID-карты, введите ее номер доступа (CAN) и PIN2-код";
+"nfc-can-title" = "Номер доступа ID-карты (CAN)";
+"nfc-device-no-support" = "Данное устройство не поддерживает бесконтактное соединение или NFC отключен";
+"nfc-hold-near" = "Удерживайте ID-карту рядом с телефоном";
+"nfc-multiple-cards" = "Обнаружено более одной NFC-метки. Удалите все объекты с NFC-элементом (NFC-метки) и попробуйте снова.";
 "nfc-invalid-tag" = "Недействительная NFC-метка";
-"nfc-unable-connect" = "Невозможно подключиться к NFC-метке";
-"nfc-auth" = "Идентификация личности по карте";
+"nfc-unable-connect" = "Бесконтактное соединение не может быть установлено";
+"nfc-auth" = "Создание бесконтактного соединения с ID-картой";
 "nfc-reading-cert" = "Считывание сертификата";
-"nfc-sign-doc" = "Подписать документ";
+"nfc-sign-doc" = "Подписание конверта";
 "nfc-sign-done" = "Подпись добавлена";
 "nfc-auth-failed" = "Идентификация личности по карте не удалась";
-"nfc-sign-failed" = "Failed to sign document with ID-card";
-"nfc-pin-locked" = "Locked PIN";
+"nfc-sign-failed" = "Не удалось подписать контейнер";
+"nfc-pin-locked" = "PIN2 заблокирован";
 "role-and-address" = "Роль и адрес";
 "role-and-address-title" = "Введите свою роль и адрес";
 "role-and-address-role-title" = "Роль / pезолюция";
