--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -234,6 +234,8 @@
 "nfc-title" = "Чтобы подписать с помощью ID-карты, введите ее номер доступа (CAN) и PIN2-код";
 "nfc-can-title" = "Номер доступа ID-карты (CAN)";
 "nfc-device-no-support" = "Данное устройство не поддерживает бесконтактное соединение или NFC отключен";
+"nfc-can-location" = "6-значный номер находится под фотографией на документе";
+"nfc-incorrect-length" = "Номер доступа (CAN) должен состоять из 6-цифр";
 "nfc-hold-near" = "Удерживайте ID-карту рядом с телефоном";
 "nfc-multiple-cards" = "Обнаружено более одной NFC-метки. Удалите все объекты с NFC-элементом (NFC-метки) и попробуйте снова.";
 "nfc-invalid-tag" = "Недействительная NFC-метка";
