--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -246,6 +246,8 @@
 "nfc-pin-locked" = "Locked PIN";
 "nfc-cert-parse-failed" = "Certificate parsing failed";
 "nfc-cert-expired" = "An expired certificate cannot be used for signing";
+"nfc-wrong-pin2" = "Wrong PIN2. Remaining attempts: %d";
+"nfc-wrong-pin1" = "Wrong PIN1. Remaining attempts: %d";
 "role-and-address" = "Role and address";
 "role-and-address-title" = "Enter your role and address info";
 "role-and-address-role-title" = "Role / resolution";
