--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -247,6 +247,8 @@
 "nfc-pin-locked" = "Locked PIN";
 "nfc-cert-parse-failed" = "Ошибка при анализе сертификата";
 "nfc-cert-expired" = "Сертификат с истекшим сроком действия не может быть использован для подписи";
+"nfc-wrong-pin2" = "Неверный PIN2-код. Оставшиеся попытки: %d";
+"nfc-wrong-pin1" = "Неверный PIN1-код. Оставшиеся попытки: %d";
 "role-and-address" = "Роль и адрес";
 "role-and-address-title" = "Введите свою роль и адрес";
 "role-and-address-role-title" = "Роль / pезолюция";
